[FT:#3622] Create json, bin and subscription caches

--- a/GPCCHS_E_CLT/src/impl/js/client/index.html
+++ b/GPCCHS_E_CLT/src/impl/js/client/index.html
@@ -10,7 +10,7 @@
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
     <script>
-        fetch('http://127.0.0.1:3000/subscriptions')
+        fetch('http://127.0.0.1:3000/api/subscriptions')
             .then(res => res.json())
             .then(data => console.log(data))
     </script>
