--- a/GPCCHS_E_CLT/src/impl/js/client/app/window.html
+++ b/GPCCHS_E_CLT/src/impl/js/client/app/window.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../node_modules/react-select/dist/react-select.css" />
     <script>
       (function() {
         if (!process.env.HOT) {
