[FT:#3622] Introduce react-grid-layout and refactor project folders.

--- a/GPCCHS_E_CLT/src/impl/js/client/app/window/index.html
+++ b/GPCCHS_E_CLT/src/impl/js/client/app/window/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../node_modules/react-grid-layout/css/styles.css" />
+    <link rel="stylesheet" href="../../node_modules/react-resizable/css/styles.css" />
     <script>
       // https://github.com/electron/electron/issues/5224
       const env = require('electron').remote.getGlobal('process').env;
