[FT:#3622] Implement windows websocket container and connectedData/view ws messages

--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/index.html
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/index.html
@@ -26,9 +26,7 @@
       bundle.src = (env.HOT) ? `http://localhost:${port}/dist/bundle.js` : '../dist/bundle.js';
       document.write(bundle.outerHTML);
 
-      const primus = document.createElement('script');
-      primus.src = env.HSS + '/primus/primus.js';
-      document.write(primus.outerHTML);
+      global.env = env;
     </script>
   </body>
 </html>
