--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/index.html
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../node_modules/react-select/dist/react-select.css" />
     <link rel="stylesheet" href="../../node_modules/react-grid-layout/css/styles.css" />
     <link rel="stylesheet" href="../../node_modules/react-resizable/css/styles.css" />
     <script>
@@ -26,9 +27,7 @@
       bundle.src = (env.HOT) ? `http://localhost:${port}/dist/bundle.js` : '../dist/bundle.js';
       document.write(bundle.outerHTML);
 
-      const primus = document.createElement('script');
-      primus.src = env.HSS + '/primus/primus.js';
-      document.write(primus.outerHTML);
+      global.env = env;
     </script>
   </body>
 </html>
