--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/index.html
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../../node_modules/react-select/dist/react-select.css" />
     <link rel="stylesheet" href="../../node_modules/react-grid-layout/css/styles.css" />
     <link rel="stylesheet" href="../../node_modules/react-resizable/css/styles.css" />
+    <!-- <link rel="stylesheet" href="http://diegoddox.github.io/react-redux-toastr/3.8/react-redux-toastr.min.css"> -->
     <script>
+    //##`react-redux-toastr` [demo](http://diegoddox.github.io/react-redux-toastr/)
       // https://github.com/electron/electron/issues/5224
       const env = require('electron').remote.getGlobal('process').env;
 
