--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/index.html
@@ -2,30 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script>
-    // https://github.com/electron/electron/issues/5224
-    global.parameters = require('electron').remote.getCurrentWindow().parameters;
-
-    // TODO remove when visionmedia/debug will be replaced
-    if (parameters.get('DEBUG')) {
-      localStorage.setItem('debug', parameters.get('DEBUG'));
-    }
-
-    if (parameters.get('IS_BUNDLED') === 'on') {
-      const link = document.createElement('link');
-      link.rel = 'stylesheet';
-      link.href = './dist/style.css';
-      document.write(link.outerHTML);
-    }
-  </script>
 </head>
 <body>
 <div id="root"></div>
 <script>
+  // https://github.com/electron/electron/issues/5224
+  global.parameters = require('electron').remote.getCurrentWindow().parameters;
+
+  // load bundle
   const bundle = document.createElement('script');
   bundle.src = parameters.get('IS_BUNDLED') === 'on'
     ? './dist/bundle.js'
-    : `http://localhost:${parameters.get('PORT')}/dist/bundle.js`;
+    : `http://localhost:${parameters.get('WEBPACK_PORT')}/dist/bundle.js`;
   document.write(bundle.outerHTML);
 </script>
 </body>
