[FT:#3622] Update splash screen size .

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/splash.html
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/splash.html
@@ -11,11 +11,14 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <link rel="stylesheet" type="text/css" href="splash.css">
 </head>
-<body>
-  <h4 align=center>Workspace loading ...</h4>
-  <script type="text/javascript" src="splashScreen.js"></script>
-  <script type="text/javascript">
-      Splash.enable('circular');
-  </script>
-</body>
+<body style="background-color:Linen">
+    <h1 align=center style="color:red; font-weight: bolder; margin-top:4pc;" >VIMA</h1>
+    <h2 align=center>Workspace loading ...</h2>
+    <div style="margin-top:4pc;">
+      <script type="text/javascript" src="splashScreen.js"></script>
+      <script type="text/javascript">
+          Splash.enable('circular');
+      </script>
+    </div>
+    </body>
 </html>
