[FT:#5316] Fix warning due to document.write use

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -14,7 +14,7 @@
   bundle.src = parameters.get('IS_BUNDLED') === 'on'
     ? './dist/bundle.js'
     : `http://localhost:${parameters.get('WEBPACK_PORT')}/dist/bundle.js`;
-  document.write(bundle.outerHTML);
+  document.body.appendChild(bundle)
 </script>
 </body>
 </html>
