--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+
 </head>
 <body>
 <div id="root"></div>
@@ -15,6 +16,13 @@
     ? './dist/bundle.js'
     : `http://localhost:${parameters.get('WEBPACK_PORT')}/dist/bundle.js`;
   document.body.appendChild(bundle)
+
+  if (parameters.get('IS_BUNDLED')) {
+    const linkCss = document.createElement('link');
+    linkCss.setAttribute('rel', 'stylesheet');
+    linkCss.setAttribute('href', './dist/style.css');
+    document.head.appendChild(linkCss);
+  }
 </script>
 </body>
 </html>
