--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -21,7 +21,7 @@
     const linkCss = document.createElement('link');
     linkCss.setAttribute('rel', 'stylesheet');
     linkCss.setAttribute('href', './dist/style.css');
-    document.head.appendChild(linkCss);
+    document.body.appendChild(linkCss);
   }
 </script>
 </body>
