[FT:#3622] Improve and debug code editor

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/codeEditor.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/codeEditor.html
@@ -3,11 +3,6 @@
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <style>
-    body {
-      margin: 0;
-    }
-  </style>
 </head>
 <body>
   <div id='root'></div>
@@ -18,9 +13,15 @@
     // load bundle
     const bundle = document.createElement('script');
     bundle.src = parameters.get('IS_BUNDLED') === 'on'
-      ? './dist/htmmEditor.bundle.js'
-      : `http://localhost:${parameters.get('WEBPACK_PORT')}/dist/htmlEditor.bundle.js`;
+      ? './dist/codeEditor.bundle.js'
+      : `http://localhost:${parameters.get('WEBPACK_PORT')}/dist/codeEditor.bundle.js`;
     document.body.appendChild(bundle)
+    if (parameters.get('IS_BUNDLED')) {
+      const linkCss = document.createElement('link');
+      linkCss.setAttribute('rel', 'stylesheet');
+      linkCss.setAttribute('href', './dist/style.css');
+      document.body.appendChild(linkCss);
+    }
   </script>
 </body>
 </html>
