--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -3,16 +3,8 @@
 <head>
   <meta charset="utf-8">
   <style>
-    #waitingRenderer {
-      text-align: center;
-      font-size: 42px;
-      font-weight: bold;
-      color: #D6D6D6;
-    }
-    #waitingRendererText {
-      margin-top: 20%;
-      font-family: Verdana, Geneva, sans-serif;
-    }
+    #waitingRenderer { text-align: center; font-size: 42px; font-weight: bold; color: #D6D6D6; }
+    #waitingRendererText { margin-top: 20%; font-family: Verdana, Geneva, sans-serif; }
   </style>
 </head>
 <body>
