[FT:#5828] Add loading message and catch errors

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -2,45 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <style>
-    #waitingRenderer { text-align: center; font-size: 42px; font-weight: bold; color: #D6D6D6; }
-    #waitingRendererText { margin-top: 20%; font-family: Verdana, Geneva, sans-serif; }
-  </style>
 </head>
 <body>
-<div id="waitingRenderer">
-  <div id="waitingRendererText">
-    <p>LOADING CONTENT ...</p>
-  </div>
-</div>
-<div id="root"></div>
-<script>
-  function getQueryStringValue (key) {
-    return decodeURIComponent(
-      window.location.search.replace(
-        new RegExp("^(?:.*[&\\?]" + encodeURIComponent(key).replace(/[\.\+\*]/g, "\\$&") + "(?:\\=([^&]*))?)?.*$", "i"), "$1"
-      )
-    );
-  }
-
-  const allParameters = JSON.parse(getQueryStringValue('params'));
-  parameters = {
-    get: name => allParameters[name]
-  };
-
-  // load bundle
-  const bundle = document.createElement('script');
-  bundle.src = parameters.get('IS_BUNDLED') === 'on'
-    ? './dist/renderer.bundle.js'
-    : `http://localhost:${parameters.get('WEBPACK_PORT')}/dist/renderer.bundle.js`;
-  document.body.appendChild(bundle)
-
-  if (parameters.get('IS_BUNDLED')) {
-    const linkCss = document.createElement('link');
-    linkCss.setAttribute('rel', 'stylesheet');
-    linkCss.setAttribute('href', './dist/style.css');
-    document.body.appendChild(linkCss);
-  }
-</script>
+  <script type='text/javascript' src='startup.js'></script>
 </body>
 </html>
