--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -4,6 +4,6 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <script type='text/javascript' src='startup.js'></script>
+  <script type='text/javascript' src='startupApp.js'></script>
 </body>
 </html>
