--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -2,8 +2,96 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <style>
+    #waitingRenderer {
+      text-align: center;
+      margin-top: 20%;
+    }
+    #loadingContent {
+      font-family: arial;
+      font-size: 43px;
+      font-weight: bold;
+      color: #D6D6D6;
+    }
+    .loader {
+      border: 8px solid #f3f3f3; /* Light grey */
+      border-top: 8px solid #192A4B; /* Blue */
+      border-radius: 50%;
+      width: 64px;
+      height: 64px;
+      animation: spin 2s linear infinite;
+      display: inline-block;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    #loadingErrors {
+      margin-top: 20px;
+      font-family: 'arial';
+      font-size: 22px;
+      color: #900;
+    }
+  </style>
 </head>
 <body>
-  <script type='text/javascript' src='startupApp.js'></script>
+  <div id="waitingRenderer">
+    <p id="loadingContent">
+      Loading renderer ...
+    </p>
+    <div style="text-align: center;">
+      <div class="loader"></div>
+    </div>
+    <p id="loadingErrors" />
+  </div>
+  <div id="root" />
+  <script type='text/javascript'>
+    (function() {
+      // error display
+      const loadingErrors = document.getElementById('loadingErrors');
+      window.onerror = e => (loadingErrors.innerHTML = `An error occured: ${e}`);
+
+      // application parameters
+      const getQueryStringValue = (key) => {
+        const needle = encodeURIComponent(key).replace(/[.+*]/g, '\\$&');
+        return decodeURIComponent(
+          window.location.search.replace(
+            new RegExp(`^(?:.*[&\\?]${needle}(?:\\=([^&]*))?)?.*$`, 'i'),
+            '$1'
+          )
+        );
+      };
+      const allParameters = JSON.parse(getQueryStringValue('params'));
+      global.parameters = {
+        get: name => allParameters[name],
+      };
+
+      // window Id
+      const search = global.location.search;
+      global.windowId = search.match('windowId=(.*)&')[1];
+
+      // load Javascript bundle
+      const bundle = document.createElement('script');
+      if (global.windowId === 'code') {
+        bundle.src = global.parameters.get('IS_BUNDLED') === 'on'
+          ? './dist/codeEditor.bundle.js'
+          : `http://localhost:${global.parameters.get('WEBPACK_PORT')}/dist/codeEditor.bundle.js`;
+      } else {
+        bundle.src = global.parameters.get('IS_BUNDLED') === 'on'
+          ? './dist/renderer.bundle.js'
+          : `http://localhost:${global.parameters.get('WEBPACK_PORT')}/dist/renderer.bundle.js`;
+      }
+      document.body.appendChild(bundle);
+
+      // load CSS bundle
+      if (global.parameters.get('IS_BUNDLED')) {
+        const linkCss = document.createElement('link');
+        linkCss.setAttribute('rel', 'stylesheet');
+        linkCss.setAttribute('href', './dist/style.css');
+        document.body.appendChild(linkCss);
+      }
+    })();
+  </script>
 </body>
 </html>
