--- a/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/index.html
@@ -75,11 +75,11 @@
       const bundle = document.createElement('script');
       if (global.windowId === 'code') {
         bundle.src = global.parameters.get('IS_BUNDLED') === 'on'
-          ? './dist/codeEditor.bundle.js'
+          ? './codeEditor.bundle.js'
           : `http://localhost:${global.parameters.get('WEBPACK_PORT')}/dist/codeEditor.bundle.js`;
       } else {
         bundle.src = global.parameters.get('IS_BUNDLED') === 'on'
-          ? './dist/renderer.bundle.js'
+          ? './renderer.bundle.js'
           : `http://localhost:${global.parameters.get('WEBPACK_PORT')}/dist/renderer.bundle.js`;
       }
       document.body.appendChild(bundle);
@@ -88,7 +88,7 @@
       if (global.parameters.get('IS_BUNDLED')) {
         const linkCss = document.createElement('link');
         linkCss.setAttribute('rel', 'stylesheet');
-        linkCss.setAttribute('href', './dist/style.css');
+        linkCss.setAttribute('href', './style.css');
         document.body.appendChild(linkCss);
       }
     })();
