--- a/GPCCHS_E_VIS/src/client/src/main/js/client/benchmarks/renderer.benchmark.html
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/benchmarks/renderer.benchmark.html
@@ -34,7 +34,7 @@
           hAxis: {
             title: 'Time (seconds)'
           },
-          vAxis: {
+          vAxes: {
             0: { title: 'Ko' },
             1: { title: '%'}
           },
@@ -50,7 +50,7 @@
           hAxis: {
             title: 'Time (seconds)'
           },
-          vAxis: {
+          vAxes: {
             0: { title: 'Ko' },
             1: { title: '%'}
           },
@@ -66,7 +66,7 @@
           hAxis: {
             title: 'Time (seconds)'
           },
-          vAxis: {
+          vAxes: {
             0: { title: 'Ko' },
             1: { title: '%'}
           },
@@ -86,7 +86,7 @@
         chart2.draw(data2, options2);
         chart3.draw(data3, options3);
       }
-      setInterval(function(){ location.reload()}, 10000);
+      setInterval(function(){ location.reload()}, 15000);
     </script>
 </head>
 
